2015-03-21  Miloslav Trmač  <mitr@redhat.com>

	* userhelper.c (fail_exit): Don't declare int return type for a 
	G_GNUC_NORETURN function. 

	* .tx/config: Remove.
	* zanata.xml: Add.  To pull updated translations, run (zanata-cli pull).
	* po/usermode.pot: Remove autogenerated file.  Unlike Transifex, Zanata
	does not need it.

2013-07-08  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Add AM_PROG_AR to silence automake.

2013-04-02  Miloslav Trmač  <mitr@redhat.com>

	* usermount.1: Fix a typo.  Patch by Tom London <selinux@gmail.com>.

2013-02-20  Miloslav Trmač  <mitr@redhat.com>

	* userhelper.c (chfn): Use helper functions provided by new libuser
	instead of verbosely dealing with GValue-s.

	* configure.ac: Enable large file support, in particular to enable
	working with 64-bit inode numbers.

2012-09-22  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 1.111.

	* NEWS: Update.
	* po/*: Update.

2012-08-21  Miloslav Trmač  <mitr@redhat.com>

	* userpasswd.c: Add missing includes.

	* configure.ac: Release 1.110.
	* NEWS: Update.
	* po/*: Update.

	* sample/README: New file.
	* sample/shutdown: Move from ...
	* shutdown: ... here.
	* sample/wrapped.console: Move from ...
	* wrapped.console: ... here.
	* sample/wrapped.pamd: Move from ...
	* shutdown.pamd: ... here.
	* Makefile.am (EXTRA_DIST): Ship contents of the "sample" subdirectory,
	remove PAM and userhelper configuration from the main one.
	(dist_bin_SCRIPTS): Remove, the script is now in the "sample"
	subdirectory.
	(consoleappdir, WRAPPED_APPS, consoleapp_DATA): Remove, the
	configuration is now in the "sample" subdirectory.
	(DISTCLEANFILES): Remove no longer generated configuration files.

2012-08-20  Miloslav Trmač  <mitr@redhat.com>

	* usermount.c (main): Reject running (userformat) without arguments
	instead of treating it like (usermount).
	* usermount.1: Clarify that the "device" argument to (userformat) is
	required.
